Issue #526 motif search UI (#740)
* refactoring for motif tables and panel

* fix style for checkbox and added gene column for results table

* fixed breaks for the long title, added chromosome name in params table

* Motifs search (#526) - do not load motif data if viewport range is too large

--- a/client/client/app/components/ngbMotifsPanel/ngbMotifsDialog.scss
+++ b/client/client/app/components/ngbMotifsPanel/ngbMotifsDialog.scss
@@ -3,23 +3,22 @@
   margin-bottom: 0px;
   padding: 0px 20px;
 }
-
+  
 .motifs-dialog-label {
   padding-left: 2px;
   font-weight: 600;
   margin-bottom: 5px;
 }
-
+  
 .motifs-dialog-input {
   max-width: 200px;
   margin-bottom: 0px;
 }
-
+  
 .motifs-dialog-checkbox {
-  margin-bottom: 16px;
 
-  .md-label {
-    padding: 3px;
+  .md-checkbox .md-container {
+    top: 40%;
   }
 
   p {
@@ -27,7 +26,8 @@
     margin-bottom: 0.5em;
   }
 }
-
+  
 .motifs-dialog-checkbox-warning {
   font-style: italic;
 }
+  
